--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ li{
     padding-top: 5px;
     font-weight: 200;
     list-style-type: none;
+    padding-bottom: 5%;
 }
 
 h3{
@@ -68,4 +69,8 @@ ul{
     border-bottom-width: 1px;
     border-bottom-color: #31fdbe;
     padding-bottom: 10px;
+}
+
+span{
+    color: orangered;
 }
